--- a/manager/app/templates/app/index.html
+++ b/manager/app/templates/app/index.html
@@ -77,7 +77,63 @@
             </ul>
         </div>
         <div class="col-md-6" style="overflow:hidden">
-            <img src="/static/img/lunbo.jpg" alt="img" />
+            <script>
+                $(function(){
+                     var wrap=document.getElementById('wrap'),
+                     pic=document.getElementById('pic').getElementsByTagName("li"),
+                     list=document.getElementById('list').getElementsByTagName('li'),
+                     index=0,
+                     timer=null;
+
+
+                     timer = setInterval(autoPlay, 5000);
+
+
+                     wrap.onmouseover = function () {
+                         clearInterval(timer);
+                     }
+
+
+                     wrap.onmouseout = function () {
+                        timer = setInterval(autoPlay, 5000);
+                     }
+
+                     for (var i = 0; i < list.length; i++) {
+                        list[i].onmouseover = function () {
+                            clearInterval(timer);
+                            index = this.innerText - 1;
+                             changePic(index);
+                        };
+                     };
+
+                     function autoPlay () {
+                        if (++index >= pic.length) index = 0;
+                        changePic(index);
+                     }
+
+
+                     function changePic (curIndex) {
+                        for (var i = 0; i < pic.length; ++i) {
+                            pic[i].style.display = "none";
+                            list[i].className = "";
+                        }
+                        pic[curIndex].style.display = "block";
+                        list[curIndex].className = "on";
+                     }
+                });
+
+            </script>
+            <div class="wrap" id="wrap">
+                <ul id="pic">
+                    <li><img src="/static/img/lunbo.jpg" alt=""/></li>
+                    <!--<li><img src="/static/img/tired.gif" alt=""/></li>-->
+                </ul>
+                <ol id="list">
+                    <li class="on">1</li>
+                    <li>2</li>
+                </ol>
+            </div>
+   <!--         <img src="/static/img/lunbo.jpg" alt="img" />-->
         </div>
         <div class="col-md-3">
             <ul class="nav nav-pills nav-stacked">
