--- a/manager/app/templates/app/nav.html
+++ b/manager/app/templates/app/nav.html
@@ -8,7 +8,7 @@
             <li><a href="#">新浪微博</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" style="margin-right:20px">
-            <li><a href="#">登录</a></li>
+            <li><a class="theme-login" href="javascript:;">登录</a></li>
             <li><a href="#">注册</a></li>
         </ul>
     </div>
