--- a/manager/app/templates/app/nav.html
+++ b/manager/app/templates/app/nav.html
@@ -1,15 +1,20 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid"></div>
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">交通监督管理系统</a>
+        <a class="navbar-brand" href="/">交通监督管理系统</a>
     </div>
     <div>
         <ul class="nav navbar-nav nav-tabs">
             <li><a href="#">新浪微博</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right" style="margin-right:20px">
-            <li><a class="theme-login" href="javascript:;">登录</a></li>
-            <li><a href="#">注册</a></li>
+            {% if request.user.is_authenticated %}
+                <li><a href="#">{{ request.user.username }}</a></li>
+                <li><a href="/logout">退出</a></li>
+            {% else %}
+                <li><a class="theme-login" href="javascript:;">登录</a></li>
+                <li><a href="#">注册</a></li>
+            {% endif %}
         </ul>
     </div>
 </nav>
