--- a/manager/app/templates/app/test.html
+++ b/manager/app/templates/app/test.html
@@ -4,11 +4,15 @@
     <script src="/static/js/jquery-3.1.1.js"></script>
 </head>
 <body>
-    <div id="test"></div>
+    <div id="test">
+        <form action="" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <p><label>上传图片</label></p>
+            <input name="file" type="file"/>
+            <input type="submit" value="submit"/>
+        </form>
+    </div>
 </body>
 <script>
-    $(function() {
-        alert("hello world");
-    });
 </script>
 </html>
